--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="content">
         <h2>About Us</h2>
         <p>Mash Academy offers personalized English lessons with less fees and 1 on 1 interactive sessions.</p>
-        <a href="https://www.instagram.com/mashacademy" class="button">Follow us on Instagram</a>
+        <a href="https://www.instagram.com/mashenglishacademy" class="button">Follow us on Instagram</a>
     </div>
     <div class="footer">
         <p>&copy; 2024 Mash Academy. All rights reserved.</p>
